--- a/quizz.html
+++ b/quizz.html
@@ -69,7 +69,7 @@
         function showResult() {
             let resultMessage;
             if (correctAnswersCount >= 5) {
-                resultMessage = `Gratuliere, ${playerName}, du hast die Prüfung bestanden. Du bist jetzt ein IT-Trainer!`;
+                resultMessage = `Gratuliere, ${playerName}, du hast die Prüfung bestanden!`;
             } else {
                 resultMessage = `Leider musst du noch lernen, ${playerName}.`;
             }
