--- a/quizz.html
+++ b/quizz.html
@@ -91,7 +91,7 @@
             document.getElementById("resultDisplay").textContent = resultMessage;
             quizSection.style.display = 'none';
             document.getElementById("resultDisplay").style.display = 'block';
-            questionMarkImg.style.display = 'none';
+            questionMarkImg.style.display = 'none'; // Hide the image after the last question is answered
         }
 
         function startQuiz() {
