--- a/quizz.html
+++ b/quizz.html
@@ -10,7 +10,7 @@
         <div id="resultDisplay" style="display: none;"></div>
         <img src="quiz.jpg" alt="QuestionMark"  width="200px" height="200px" id="questionMarkImg">
         <div class="main-content">
-            <p>Bitte geben sie ihr Name ein:</p>
+            <p>Bitte geben Sie Ihren Namen ein:</p>
             <input type="text" id="playerName" />
             <button id="buttoncolor" onclick="startQuiz()">Start Quiz</button>
         </div> 
@@ -25,6 +25,9 @@
         </div>
     </div>
 
+    <!-- Add this button below the result display -->
+    <button id="restartButton" onclick="restartQuiz()" style="display: none;">Restart Quiz</button>
+
     <!-- JavaScript code -->
     <script>
         let playerName;
@@ -37,7 +40,7 @@
             ["1+1=3, stimmt das?", false],
             ["Österreich hat mehr als 10 Millionen Einwohner.", false],
             ["Österreich und Deutschland sind Nachbarländer.", true],
-            ["Wie viele Bundesländern hat Österreich?", true],
+            ["Wie viele Bundesländer hat Österreich?", true],
             ["Wir befinden uns gerade im Kurs.", true]
         ];
         let currentQuestionIndex = 0;
@@ -91,7 +94,7 @@
             document.getElementById("resultDisplay").textContent = resultMessage;
             quizSection.style.display = 'none';
             document.getElementById("resultDisplay").style.display = 'block';
-            questionMarkImg.style.display = 'none'; // Hide the image after the last question is answered
+            document.getElementById("restartButton").style.display = 'block'; // Show the restart button
         }
 
         function startQuiz() {
@@ -100,7 +103,7 @@
             document.getElementById("buttoncolor").style.backgroundColor= 'yellow';
             playerName = document.getElementById('playerName').value;
             if (!playerName) {
-                alert('Bitte geben Sie ihr Name ein.');
+                alert('Bitte geben Sie Ihren Namen ein.');
             } else {
                 alert(`Sie werden als ${playerName} eingeloggt.\nLog in erfolgreich.`);
                 askQuestion();
@@ -109,6 +112,14 @@
 
                 quizSection.style.display = 'block';
             }
+        }
+
+        function restartQuiz() {
+            currentQuestionIndex = 0;
+            correctAnswersCount = 0;
+            document.getElementById("resultDisplay").style.display = "none";
+            document.getElementById("questionMarkImg").style.display = "block"; // Show the image again
+            askQuestion();
         }
     </script>
 </body>
