--- a/quizz.html
+++ b/quizz.html
@@ -66,11 +66,13 @@
         document.getElementById("35").style.display = "inline";
         document.getElementById("Ja").style.display = "none";
         document.getElementById("Nein").style.display = "none";
-    } else if (currentQuestionIndex === 6) {
+    } else if (currentQuestionIndex === 5) {
         document.getElementById("Ready").style.display = "inline";
         document.getElementById("NotReady").style.display = "inline";
         document.getElementById("Ja").style.display = "none";
         document.getElementById("Nein").style.display = "none";
+        document.getElementById("25").style.display = "none";
+        document.getElementById("35").style.display = "none"
     } else {
         document.getElementById("25").style.display = "none";
         document.getElementById("35").style.display = "none";
